-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.4.0, Lustre 2.4.1, Lustre 2.5.0, Lustre 2.8.0
-
None
-
server and client : lustre-master build# 1536 zfs
-
3
-
8858
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/903643c8-ddca-11e2-85a3-52540035b04c.
The sub-test test_iozone failed with the following error:
iozone (2) failed
test log shows:
Error writing block 7269, fd= 3 write: No space left on device iozone: interrupted exiting iozone sanity-benchmark test_iozone: @@@@@@ FAIL: iozone (2) failed