LU-3522 osd-zfs: Report ZFS blocksize as 4K

This will cause ofd to do rational grants instead of trying to
grant wildly too much space for each write.  Without this change
ofd assumed that all grants would take up 32x the amount of space
becuase zfs reported a block size of 128KB.

Test-Parameters: mdsfilesystemtype=zfs mdtfilesystemtype=zfs  ostfilesystemtype=zfs testlist=sanity-benchmark,sanity,conf-sanity
Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: Ie67a7e9379b37f3c307cc1da9a9127865e172ff5